support parse line matches

--- a/src/main/resources/links.properties
+++ b/src/main/resources/links.properties
@@ -1,2 +1,2 @@
-1xbet.url = https://1xbetua.com/us/
+1xbet.url = https://1xbetua.com/us/line/Football/
 flashscore.url = https://www.flashscore.com/
