--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,15 @@
 			<artifactId>selenium-chrome-driver</artifactId>
 			<version>3.13.0</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
