add email to props

--- a/src/main/resources/links.properties
+++ b/src/main/resources/links.properties
@@ -2,3 +2,6 @@
 flashscore.url = https://www.flashscore.com/
 
 cron.scheduled = 0 0 9 * * ?
+
+email.adress.1 = adrerek@gmail.com
+email.adress.2 = artichsa@yandex.ua
