--- a/src/main/resources/links.properties
+++ b/src/main/resources/links.properties
@@ -5,3 +5,6 @@ cron.scheduled = 0 0 9 * * ?
 
 email.adress.1 = adrerek@gmail.com
 email.adress.2 = artichsa@yandex.ua
+
+threshold.1=0.8
+threshold.2=0.6
