--- a/src/main/resources/links.properties
+++ b/src/main/resources/links.properties
@@ -1,5 +1,9 @@
 1xbet.url = https://1xbetua.com/us/line/Football/
 flashscore.url = https://www.flashscore.com/
+flashscorehockey.url = https://www.flashscore.com/hockey/
+
+1xbetexchane.url = https://1xbetua.com/en/betexchange/Football/
+1xbetexchanehockey.url =https://1xbetua.com/en/betexchange/Ice-Hockey/
 
 email.adress.1 = adrerek@gmail.com
 email.adress.2 = artichsa@yandex.ua
