--- a/src/main/resources/links.properties
+++ b/src/main/resources/links.properties
@@ -10,3 +10,21 @@ email.adress.2 = artichsa@yandex.ua
 
 threshold.1=0.8
 threshold.2=0.6
+
+
+england.url=https://www.flashscore.com/football/england/premier-league/fixtures/
+germany.url=https://www.flashscore.com/football/germany/bundesliga/fixtures/
+italy.url=https://www.flashscore.com/football/italy/serie-a/fixtures/
+spain.url=https://www.flashscore.com/football/spain/laliga/
+
+england.prev=
+england.curr=
+
+germany.prev=
+germany.curr=
+
+italy.prev=
+italy.curr=
+
+spain.prev=
+spain.curr=
