--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
 			<version>1.7.25</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.7</version>
+		</dependency>
+
+
 
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
 		<dependency>
@@ -80,6 +88,7 @@
 			<scope>provided</scope>
 		</dependency>
 
+
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -95,8 +104,8 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
+        <dependency>
+        <groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
 			<version>1.4</version>
 		</dependency>
@@ -106,11 +115,7 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-support</artifactId>
 			<version>3.14.0</version>
-		</dependency>
-
-
-
-
+        </dependency>
 
 	</dependencies>
 
