--- a/src/main/resources/links.properties
+++ b/src/main/resources/links.properties
@@ -17,8 +17,8 @@ germany.url=https://www.flashscore.com/football/germany/bundesliga/fixtures/
 italy.url=https://www.flashscore.com/football/italy/serie-a/fixtures/
 spain.url=https://www.flashscore.com/football/spain/laliga/
 
-england.prev=
-england.curr=
+england.prev=/tmp/englandPrev.txt
+england.curr=/tmp/englandCur.txt
 
 germany.prev=
 germany.curr=
