--- a/src/main/resources/links.properties
+++ b/src/main/resources/links.properties
@@ -12,7 +12,7 @@ threshold.1=0.8
 threshold.2=0.6
 
 
-england.url=https://www.flashscore.com/football/england/premier-league/fixtures/
+england.url=https://www.live-result.com/football/England/Premier-League/scheduled/
 germany.url=https://www.flashscore.com/football/germany/bundesliga/fixtures/
 italy.url=https://www.flashscore.com/football/italy/serie-a/fixtures/
 spain.url=https://www.flashscore.com/football/spain/laliga/
