--- a/src/main/resources/links.properties
+++ b/src/main/resources/links.properties
@@ -13,18 +13,18 @@ threshold.2=0.6
 
 
 england.url=https://www.live-result.com/football/England/Premier-League/scheduled/
-germany.url=https://www.flashscore.com/football/germany/bundesliga/fixtures/
-italy.url=https://www.flashscore.com/football/italy/serie-a/fixtures/
-spain.url=https://www.flashscore.com/football/spain/laliga/
+germany.url=https://www.live-result.com/football/Germany/Bundesliga-I/scheduled/
+italy.url=https://www.live-result.com/football/Italy/Serie-A/scheduled/
+spain.url=https://www.live-result.com/football/Spain/Primera-division/scheduled/
 
-england.prev=/tmp/englandPrev.txt
-england.curr=/tmp/englandCur.txt
+england.prev=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\englandPrev.txt
+england.curr=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\englandCur.txt
 
-germany.prev=
-germany.curr=
+germany.prev=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\germanyPrev.txt
+germany.curr=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\germanyCur.txt
 
-italy.prev=
-italy.curr=
+italy.prev=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\italyPrev.txt
+italy.curr=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\italyCur.txt
 
-spain.prev=
-spain.curr=
+spain.prev=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\spainPrev.txt
+spain.curr=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\spainCurr.txt
