--- a/src/main/resources/links.properties
+++ b/src/main/resources/links.properties
@@ -30,4 +30,4 @@ spain.prev=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\s
 spain.curr=C:\\Users\\Tempuser\\IdeaProjects\\MoneyTool\\src\\main\\resources\\spainCurr.txt
 
 path.chromedriver=C:\\chromedriver\\chromedriver.exe
-path.chrome=C:\\Users\\rig01\\AppData\\Local\\Google\\Chrome SxS\\Application\\chrome.exe
+path.chrome=C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe
